# ChangeLog for sys-kernel/genkernel
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.392 2014/07/19 19:23:25 klausman Exp $

  19 Jul 2014; Tobias Klausmann <klausman@gentoo.org> genkernel-3.4.49.ebuild:
  Stable on alpha, bug #506404

*genkernel-3.4.51 (15 Jul 2014)

  15 Jul 2014; Robin H. Johnson <robbat2@gentoo.org> +genkernel-3.4.51.ebuild:
  Bump for bug #468760.

*genkernel-9999-r1 (23 Jun 2014)
*genkernel-3.4.50 (23 Jun 2014)

  23 Jun 2014; Robin H. Johnson <robbat2@gentoo.org> +genkernel-3.4.50.ebuild,
  +genkernel-9999-r1.ebuild, genkernel-9999.ebuild:
  Move distfiles to $GK_SHARE/distfiles instead of /var/cache; make naming of
  files from --{minkern,modules}package match kernel naming from --install, and
  also fix the paths used with them. 9999-r1 contains EAPI4/5 proposed cleanups.

  21 Jun 2014; Richard Yao <ryao@gentoo.org> genkernel-3.4.45.1.ebuild,
  genkernel-3.4.48.ebuild, genkernel-3.4.49.1.ebuild, genkernel-3.4.49.2.ebuild,
  genkernel-3.4.49.ebuild, genkernel-9999.ebuild:
  Fix epatch_user, bug #514112

  21 Jun 2014; Patrick Lauer <patrick@gentoo.org> genkernel-3.4.49.2.ebuild:
  Comment out random failing epatch_user call

  20 Jun 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  genkernel-3.4.45.1.ebuild, genkernel-3.4.48.ebuild, genkernel-3.4.49.1.ebuild,
  genkernel-3.4.49.2.ebuild, genkernel-3.4.49.ebuild, genkernel-9999.ebuild:
  added epatch_user to genkernel ebuilds

  19 Jun 2014; Markus Meier <maekke@gentoo.org> genkernel-3.4.49.2.ebuild:
  arm stable, bug #511992

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> genkernel-3.4.49.ebuild:
  x86 stable wrt bug #506404

  06 Jun 2014; Jeroen Roovers <jer@gentoo.org> genkernel-3.4.49.2.ebuild:
  Stable for HPPA (bug #511992).

  31 May 2014; Robin H. Johnson <robbat2@gentoo.org> genkernel-3.4.49.2.ebuild:
  Bug #511992: stablereq.

*genkernel-3.4.49.2 (31 May 2014)
